Update navigation bar position and add missing assets

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- Top Nav -->
     <nav class="top-nav">
       <div class="logo">ABHIYANTRAN-26</div>
+      <div class="menu-toggle"><i class="fas fa-bars"></i></div>
       <ul>
         <li>Accommodation</li>
         <li>Workshops</li>
